Code, styles updated and added a netlify.toml file

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRV0wqnaFq4aLvbOTL-o3P7SLHkWdWXZQHF-A&s"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Movies Search App</title>
   </head>
